<resources>
    <string name="app_name">Loader.PH</string>
    <string name="android_pay">Android Pay. Simple way to pay</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="description_example">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="product_size">Size: 40</string>
    <string name="product_color">Color: Black</string>
    <string name="product_price">Price: 80$</string>
    <string name="action_cart">Search</string>
    <string name="quantity">1</string>
    <string name="product_name">Sleek black top</string>
    <string name="price">100 $</string>
    <string name="remove_from_cart">Remove</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="checkout">Checkout</string>
    <string name="sub_total">Sub total:</string>
    <string name="server_error">Failed to payment information to server</string>
    <string name="successful_payment">Payment successfully uploaded</string>
    <string name="pay_with_paypal">Pay with PayPal</string>
    <string name="home_label">HOME</string>
    <string name="home">HOME</string>
    <string name="homelabel">HOME</string>
    <string name="accessibility_service_description">Accessibility</string>
    <string name="permission_necessary">Permission Necessary</string>
    <string name="storage_permission_is_encessary_to_wrote_event">storage permission is encessary to wrote event</string>
    <string name="load_customer">LOAD CUSTOMER</string>
    <string name="retailer_number">RETAILER NUMBER</string>
    <string name="retialernumberinput" />
    <string name="retailernumber" >Input Customer Number</string>
    <string name="customernumberhint" >Format: 09181234567</string>
    <string name="brand">BRAND</string>
    <string name="products">PRODUCT LIST</string>
    <string name="button">LOAD</string>
    <string name="backlabel">BACK</string>
    <string name="productdesc">PRODUCT DESCRIPTION</string>
    <string name="productlistlabel" translatable="false">PRODUCT LIST</string>
    <string name="todo">TODO</string>
    <string name="http">http://</string>
    <string name="download">Update Promos</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="settings">SETTINGS</string>
    <string name="name">Name</string>










    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">This application is on beta stage, please provide some feedback on errors that you will encounter or some suggestions that we may add.</string>
    <string name="app_version_value">Currently: 1.0 beta</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version Update</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_default_gateway">Default Gateway</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_default_gateway">key_default_gateway</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings_headers">Settings with Headers</string>
    <string name="title_update">Update</string>
    <string name="default_gateway" translatable="false">Yo</string>
    <string name="customer_number_label">CUSTOMER NUMBER</string>
    <string name="load_customer_confirm">CONFIRM LOAD TRANSFER</string>
    <string name="confirmbutton">CONFIRM</string>


    <string name="toolbar_title">Product List</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="downloadStarted">Download Started</string>
    <string name="downloadCompleted">Download Completed</string>
    <string name="downloadFailed">Download Failed</string>
    <string name="downloadAgain">Download Again</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="flexi_amount">Amount: 10.00 – 1,000.00</string>
    <string name="update_gateway_btn">UPDATE</string>
    <string name="update_gateway_label">SELECT GATEWAY</string>
    <string name="loader_type_label">LOADER TYPE</string>
    <string name="initial_setup">INITIAL SETUP</string>
    <string name="login">Login</string>
    <string name="password">Password?</string>
    <string name="main_menu_label">MAIN MENU</string>
    <string name="samplebutton">SAMPLE BUTTON</string>
    <string name="test">TEST</string>



    <string name="btn_custom">Button in custom layout</string>


    <string name="preferences_category_one">Category 1</string>
    <string name="preferences_category_two">Category 2</string>

    <string name="preferences_switch_title">Switch Preference</string>
    <string name="preferences_switch_summ">Switch Summary</string>

    <string name="preferences_edittext_title">EditText Preference</string>
    <string name="preferences_edittext_summ">EditText Summary</string>
    <string name="preferences_edittext_default">Default value</string>
    <string name="preferences_edittext_message">Dialog Message</string>

    <string name="preferences_time_title">Time Preference</string>
    <string name="preferences_time_summ">Time Summary</string>

    <string name="preferences_checkbox_title">CheckBox Preference</string>
    <string name="preferences_checkbox_summ">CheckBox Summary</string>
    <string name="btn_update">UPDATE</string>







    <string name="amount">AMOUNT</string>
    <string name="load_amount">Load Amount</string>
    <string name="dealer_menu_label">DEALER MENU</string>
    <string name="pass_load_title">PASS LOAD</string>
    <string name="dealernumtopass">DEALER NUMBER TO PASS LOAD</string>
    <string name="inputdealernum">Input Dealer Number</string>
    <string name="load_retailer">LOAD RETAILER</string>
    <string name="passload_confirm_title">CONFIRM PASS LOAD</string>
    <string name="number_to_pass_load">NUMBER TO PASS LOAD</string>
    <string name="confirm_load_retailer">CONFIRM LOAD RETAILER</string>
    <string name="transferload_label">TRANSFER LOAD</string>
    <string name="confirmtransferload_label">CONFIRM TRANSFER LOAD</string>
    <string name="loadretailer_label">LOAD RETAILER</string>
    <string name="confirmloadretailer_label">CONFIRM LOAD RETAILER</string>
    <string name="passload_label">PASS LOAD</string>
    <string name="confirmpassload_label">CONFIRM PASS LOAD</string>



    <string name="rate_title">Rate the library!</string>
    <string name="rate_message">Your star won\'t change or influence anything (maybe will make me a bit happier).</string>
    <string name="repo_waiting">GitHub repo is waiting for your star!</string>
    <string name="later">Later</string>
    <string name="gotosettings">SETUP LOADER</string>
    <string name="splash_dialog_message">To start using this app, you will need to setup this app.
        Please note that you must have an active Loader account in order to use this app.
        This app also uses your load and will incur charges.
        Registering to a promos for SMS sending and selecting the same network is highly recommended.
        Thank you for using this application.</string>
    <string name="splash_dialog_title">Welcome!</string>
    <string name="splash_dialog_exit">EXIT</string>



    <!-- SMS RESPONSES -->
    <string name="RESULT_ERROR_GENERIC_FAILURE">Check Operator Services, please try again!</string>
    <string name="RESULT_ERROR_NO_SERVICE">No service, please try again!</string>
    <string name="RESULT_ERROR_NULL_PDU">Null PDU, please try again!</string>
    <string name="RESULT_ERROR_RADIO_OFF">Aiplane Mode is active or no signal detected, please try again!</string>


</resources>



