<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redbg"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".UpdateProductListActivity">

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/http"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:visibility="invisible"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextUrl"
        android:layout_centerHorizontal="true"
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:padding="10sp"
        android:text="@string/download" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignBottom="@+id/editTextUrl"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="-238dp"
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:text="@string/action_settings"
        android:textColor="@color/textbox"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>