<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayishblack"
    android:focusableInTouchMode="true"
    tools:context="com.inducesmile.retailer.MainMenuActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="52dp"
        android:padding="0dp">

    </FrameLayout>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="109dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="268dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center_horizontal"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/page_title"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginTop="-17dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/loadretailer_label"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/dealernum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/retailer_number"
        android:textColor="#ffffff"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/dealerphone"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dealernum"
        android:layout_alignStart="@+id/logo"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:ems="10"
        android:hint="@string/customernumberhint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textbox"
        android:textColorHighlight="@color/common_google_signin_btn_text_light_disabled"
        tools:ignore="TextFields"
        tools:targetApi="o" />

    <Button
        android:id="@+id/contactspickerbutton"
        android:layout_width="36dp"
        android:layout_height="41dp"
        android:layout_alignTop="@+id/dealerphone"
        android:layout_alignEnd="@+id/dealerphone"
        android:layout_alignRight="@+id/dealerphone"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/contacts"
        android:gravity="center" />



    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dealerphone"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="11dp"
        android:text="@string/amount"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/amountnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dealernum"
        android:layout_alignStart="@+id/logo"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:autofillHints=""
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:ems="10"
        android:hint="@string/load_amount"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textbox"
        android:textColorHighlight="@color/common_google_signin_btn_text_light_disabled"
        tools:targetApi="o" />

    <Button
        android:id="@+id/loadbutton"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:layout_below="@+id/amountnum"
        android:layout_alignStart="@+id/amount"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@color/redbg"
        android:text="@string/button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/amount"
        android:layout_marginLeft="1dp" />

</RelativeLayout>