<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redbg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ProductListFilterActivityx">

        <ImageView
            android:id="@+id/logo3"
            android:layout_width="356dp"
            android:layout_height="122dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="268dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/PRODUCTLIST2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/logo3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="119dp"
            android:layout_marginLeft="119dp"
            android:layout_marginTop="100dp"
            android:text="@string/productlistlabel"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:id="@+id/product_list"
            android:layout_width="300dp"
            android:layout_height="308dp"
            android:layout_above="@+id/backbutton3"
            android:layout_below="@+id/searchView1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background" />

        <SearchView
            android:id="@+id/searchView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PRODUCTLIST2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/common_google_signin_btn_text_light_normal_background"
            android:iconifiedByDefault="false"
            android:padding="2dp"
            android:queryHint="Search..">

        </SearchView>

        <Button
            android:id="@+id/backbutton3"
            android:layout_width="316dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:background="@drawable/common_google_signin_btn_text_light_normal_background"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/backlabel"
            android:textColor="@color/textbox"
            android:textSize="14sp"
            android:textStyle="bold" />

</RelativeLayout>