<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayishblack"
    tools:context="com.inducesmile.retailer.MainMenuActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="52dp"
        android:padding="0dp">

    </FrameLayout>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="109dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="268dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center_horizontal"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="-11dp"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/confirmpassload_label"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!--
    <Spinner
        android:id="@+id/productspinner"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/products"
        android:layout_alignEnd="@+id/contactspickerbutton"
        android:layout_alignRight="@+id/contactspickerbutton"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:gravity="center_vertical|center_horizontal|center"
        android:padding="10dp" />
        -->

    <TextView
        android:id="@+id/proddescription"
        android:layout_width="match_parent"
        android:layout_height="303dp"
        android:layout_alignTop="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:autofillHints=""
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal|center"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textSize="18sp"
        tools:ignore="LabelFor,TextViewEdits,UnusedAttribute" />

    <Button
        android:id="@+id/loadbutton"
        android:layout_width="313dp"
        android:layout_height="34dp"        android:layout_below="@+id/proddescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@color/redbg"
        android:text="@string/confirmbutton"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:text="@string/backlabel"
        android:textColor="@color/textbox"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>